--- a/index.html
+++ b/index.html
@@ -11,18 +11,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body>
+
+<body position="static">
     <div>
         <div class="dose-title">D O S E</div>
     </div>
     
     <div id="first-page">                               <!-- this is page 1-->
-        <span id="title">ABANSE DOSE</span> 
-        <span id="stinger">Long live Region XII</span>
+
+        <div position="relative">
+            <span id="title">ABANSE DOSE</span> 
+            <span id="stinger">Long live Region XII</span>
+
+            <span id="xii-subtitle">Well known for its products, tourist spots and<br>hospitality, SOCCSKARGEN is truly a remarkable region.  
+            </span>
+        </div>
 
         <div id="tnalak-container">
-            <div class="fill"></div>
-
             <div id="tnalak-img-container">
                 <img src="images/tnalak.jpg" alt="tnalak" id="tnalak-img">
             </div>
@@ -32,6 +37,10 @@
                 <p id="tnalak-hover-subtitle">Weaved by the finest dreamweavers of the south</p>
             </div>
         </div>
+    </div>
+
+    <div id="second-page">
+        hello im under the water 
     </div>
 
 </body>
