--- a/index.html
+++ b/index.html
@@ -40,8 +40,38 @@
     </div>
 
     <div id="second-page">
-        hello im under the water 
-    </div>
+        <div id="image-window-container">
+            <div class="column">
+                <img src="images/pinya.jpg" alt="pineapple" class="img-window">
+            </div>
+            <div class="column">
+                <img src="images/blaan.jpg" alt="B'laan" class="img-window">
+            </div>
+            <div>
+                <img src="images/madamganda.jpg" alt="Bai Rihan" class="img-window">
+            </div>
+        </div>
 
+        <div class="des-container">
+            <div class="window-des">
+                <p class="window-title">TOP SUPPLIER</p>
+                <p class="window-subtitle">Image courtersy<br>Jessie Ponce</p>
+            </div>
+
+            <div class="window-des">
+                <p class="window-title">DIVERSE IN <br>CULTURE </p>
+                <p class="window-subtitle">Image courtersy<br>Rondald de Jong</p>
+            </div>
+        
+            <div class="window-des">
+                <p class="window-title">WORLD-<br>CLASS WONDERS </p>
+                <p class="window-subtitle">Image courtersy<br>James Montano Photography</p>
+            </div>
+        </div>
+    </div> 
+
+    <div id="third-page">
+
+    </div>
 </body>
 </html>
