--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
-<body position="static">
+<body>
     <div>
         <div class="dose-title">D O S E</div>
     </div>
@@ -41,36 +41,35 @@
 
     <div id="second-page">
         <div id="image-window-container">
-            <div class="column">
+            <div class="section-container">
                 <img src="images/pinya.jpg" alt="pineapple" class="img-window">
+                <div id="overlay-1">
+                    <p class="window-title">TOP SUPPLIER</p>
+                    <p class="window-subtitle">Image courtersy<br>Jessie Ponce</p>
+                </div>
             </div>
-            <div class="column">
+            <div class="section-container">
                 <img src="images/blaan.jpg" alt="B'laan" class="img-window">
+                <div class="overlay">
+                    <p class="window-title">DIVERSE IN <br>CULTURE </p>
+                    <p class="window-subtitle">Image courtersy<br>Rondald de Jong</p>
+                </div>
             </div>
-            <div>
+            <div class="section-container">
                 <img src="images/madamganda.jpg" alt="Bai Rihan" class="img-window">
+                <div class="overlay">
+                    <p class="window-title">WORLD-<br>CLASS WONDERS </p>
+                    <p class="window-subtitle">Image courtersy<br>James Montano Photography</p>
+                </div>
             </div>
         </div>
-
         <div class="des-container">
-            <div class="window-des">
-                <p class="window-title">TOP SUPPLIER</p>
-                <p class="window-subtitle">Image courtersy<br>Jessie Ponce</p>
-            </div>
-
-            <div class="window-des">
-                <p class="window-title">DIVERSE IN <br>CULTURE </p>
-                <p class="window-subtitle">Image courtersy<br>Rondald de Jong</p>
-            </div>
-        
-            <div class="window-des">
-                <p class="window-title">WORLD-<br>CLASS WONDERS </p>
-                <p class="window-subtitle">Image courtersy<br>James Montano Photography</p>
-            </div>
         </div>
     </div> 
 
     <div id="third-page">
+        <p id="quote">"</p>
+        <p>Kami'y nagkakaisa<br>Sa pangagat ng ngalan mo</p>
 
     </div>
 </body>
