fix: fix initial layout

--- a/index.html
+++ b/index.html
@@ -1,25 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Region XII</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans:wght@400;700&family=Roboto:ital@0;1&display=swap"
+      rel="stylesheet" />
+  </head>
+  <body>
+    <header>
+      <div id="hero-content">
+        <span class="logo">Dose</span>
+        <div>
+          <h1>Abanse Dose</h1>
+          <h2>Long Live Region XII</h2>
+        </div>
+        <div>
+          <h3>
+            Well known for its products, tourist spots andhospitality,
+            SOCCSKARGEN is truly a remarkable region.
+          </h3>
+        </div>
+      </div>
+      <div id="hero-image"></div>
+    </header>
+    <main>
+      <div class="img" id="img1"></div>
+      <div class="img" id="img2"></div>
+      <div class="img" id="img3"></div>
+    </main>
+    <section id="quote">
+      <!-- <p id="quotation">"</p> -->
+      <span class="logo">Dose</span>
+      <p>Kami nagkakaisa sa <span class="red">ngalan mo</span></p>
+    </section>
+    <aside>
+      <h4>View More</h4>
+      <p>Explore more about Region 12</p>
+    </aside>
+    <footer>
+      <div id="branding">
+        <span id="brand-name">Region 12</span>
+        <div id="brand-text">
+          <p>Pinagpala ng Maykapal.</p>
+          <p>Mabuhay ka <span id="brand-highlight">SOCCSKSARGEN</span></p>
+        </div>
+      </div>
+      <div id="links">
+        <span id="link-title">Explore</span>
+        <ul>
+          <li>Home</li>
+          <li>Demography</li>
+          <li>Economoy</li>
+          <li>About</li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 
-<body position="static">
+  <!-- <body position="static">
     <div>
         <div class="dose-title">D O S E</div>
     </div>
     
     <div id="first-page">                               <!-- this is page 1-->
 
-        <div position="relative">
+  <!-- <div position="relative">
             <span id="title">ABANSE DOSE</span> 
             <span id="stinger">Long live Region XII</span>
 
@@ -41,7 +92,8 @@
 
     <div id="second-page">
         hello im under the water 
-    </div>
+    </div> -->
 
-</body>
+  <!-- </body> -->
+  -->
 </html>
